deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perf-netcorebaseline
  namespace: ingress-basic
  labels:
    app: perf-netcorebaseline
spec:
  selector:
    app: perf-netcorebaseline
  type: ClusterIP
  ports:
  - name: http
    port: 5000
    targetPort: http
    protocol: TCP
